--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.54.5",
     "web-vitals": "^2.1.4"
   },
